tests/baselines/reference/derivedClassWithPrivateStaticShadowingPublicStatic.errors.txt
==== tests/cases/compiler/derivedClassWithPrivateStaticShadowingPublicStatic.ts (5 errors) ====
    class Base {
        public static x: string;
        public static fn(): string {
            return '';
        }
    
        public static get a() { return 1; }
        public static set a(v) { }
    }
    
    // BUG 847404
    // should be error
    class Derived extends Base {
          ~~~~~~~
!!! derivedClassWithPrivateStaticShadowingPublicStatic.ts(13,7): error TS2141: Class 'Derived' cannot extend class 'Base':
!!! 	Static property 'x' defined as private in type 'Derived' is defined as public in type 'Base'.
        private static x: string; 
        private static fn(): string {
            return '';
        }
    
        private static get a() { return 1; }
        private static set a(v) { }
    }
    
    var r = Base.x; // ok
    var r2 = Derived.x; // error
                     ~
!!! derivedClassWithPrivateStaticShadowingPublicStatic.ts(24,18): error TS2107: 'Derived.x' is inaccessible.
    
    var r3 = Base.fn(); // ok
    var r4 = Derived.fn(); // error
                     ~~
!!! derivedClassWithPrivateStaticShadowingPublicStatic.ts(27,18): error TS2107: 'Derived.fn' is inaccessible.
    
    var r5 = Base.a; // ok
    Base.a = 2; // ok
    
    var r6 = Derived.a; // error
                     ~
!!! derivedClassWithPrivateStaticShadowingPublicStatic.ts(32,18): error TS2107: 'Derived.a' is inaccessible.
    Derived.a = 2; // error
            ~
!!! derivedClassWithPrivateStaticShadowingPublicStatic.ts(33,9): error TS2107: 'Derived.a' is inaccessible.